--- a/HotelASP.NET/Pages/Cliente/Index.cshtml
+++ b/HotelASP.NET/Pages/Cliente/Index.cshtml
@@ -11,6 +11,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EasyReverHotels - Reservaciones</title>
+    <link rel="stylesheet" href="~/css/Index.css" />
     <script src="~/js/carousel.js"></script>
 </head>
 <body>
